# temporalio-server

./: CONTRIBUTING.md  README.md  example.py  fetch_temporal_cli.py  hello_activity.py  pyproject.toml
.github/scripts/: check_version.py
.github/workflows/: publish.yml
src/temporalio_server/: __init__.py  main.py
